<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WMe</string>
    <string name="applicationId">1404233603125231</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_log_out_message">Are you sure to log out?</string>
    <string name="com_facebook_loginview_log_in_prompt_message">Please log in first.</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading\u2026</string>
    <string name="network_unavaliable">Network unavailable</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="facebook_features">Facebook features</string>
    <string name="facebook_notification">Notification</string>
    <string name="facebook_checkin">Check in by W&#047;Me</string>
    <string name="facebook_checkin_me_here">I am here!</string>
    <string name="facebook_checkintext">Check-in text</string>
    <string name="facebook_checkin_control_prompt">Please open the check in control switch.</string>
    <string name="setting_network_open">Please open access to my location.</string>
    <string name="facebook_share_message_prefix">" used W/Me @ "</string>
    <string name="facebook_share_message_success">Share successfully!</string>
    <string name="facebook_share_message_fail">Share failed!</string>
    <string name="configuration_title">CONFIGURATION</string>
    <string name="welcome_title">Welcome to W&#047;Me</string>
    <string name="home_title">W&#047;Me</string>
    <string name="profile_title">PROFILE</string>
    <string name="settings_title">SETTINGS</string>
    <string name="facebook_title">FACEBOOK SETTING</string>
    <string name="aboutus_title">ABOUT US</string>
    <string name="faq_title">FAQ</string>
    <string name="measure_title">MEASURE</string>
    <string name="coaching_title">COACHING</string>
    <string name="history_title">HISTORY</string>
    <string name="master_label">"Hi %s, "</string>
    <string name="start_label">LET\'S START</string>
    <string name="guest_label">GUEST</string>
    <string name="tutorial_title">TUTORIAL</string>
    <string name="prompt_label">Touch the sensor and hold steady\u2026</string>
    <string name="prompt_label_better">Please hold steady for better reception\u2026</string>
    <string name="calm_label">Stay calm\u2026</string>
    <string name="measure_start_label">The measurement is about to start\u2026</string>
    <string name="second_label">sec.</string>
    <string name="time_label">TIME</string>
    <string name="bpm_label">BPM</string>
    <string name="time_format">"<xliff:g id="minute">%s</xliff:g>m<xliff:g id="second">%s</xliff:g>s"</string>
    <string name="measuring_label">Measuring in progress\u2026</string>
    <string name="guest_prompt_label">Hi there, \nTell me more about yourself.</string>
    <string name="guest_start_label">START</string>
    <string name="passive_area_flag">Passive</string>
    <string name="excitable_area_flag">Excitable</string>
    <string name="pessimistic_area_flag">Pessimistic</string>
    <string name="anxious_area_flag">Anxious</string>
    <string name="balanced_area_flag">Balanced</string>
    <string name="timeout_title">Timeout</string>
    <string name="timeout_wait_long">Wait too long, please restart!</string>
    <string name="timeout_bluetooth">Bluetooth timeout, please try again!</string>
    <string name="signal_unstable">Signal is unstable.</string>
    <string name="hold_retrieve">Hold steady to retrieve\u2026</string>
    <string name="measure_continue">Will continue in %d sec.</string>
    <string name="start">"Start"</string>
    <string name="custom_level_txt">"Customize your way!"</string>
    <string name="pair_wme">"Pair W&#047;Me"</string>
    <string name="gmail">"Gmail"</string>
    <string name="alarm">"Alarm"</string>
    <string name="incoming_call">"Incoming call"</string>
    <string name="find_my_phone">"Find my phone"</string>
    <string name="reset">"Reset all settings"</string>
    <string name="facebook">"Facebook"</string>
    <string name="reset_dialog_txt">"All settings will be reset to default and W&#047;Me app will be restarted to run Welcome scenario. Please tap OK to proceed."</string>
    <string name="inhale">"Inhale"</string>
    <string name="exhale">"Exhale"</string>
    <string name="hold">"Hold"</string>
    <string name="upper_unit_sec">"Sec"</string>
    <string name="cycles">"Cycles"</string>
    <string name="times">"Times"</string>
    <string name="level_m">"LEVEL M"</string>
    <string name="level">"LEVEL"</string>
    <string name="sec">"sec"</string>
    <string name="upper_cycle">"CYCLE"</string>
    <string name="hit">"HIT"</string>
    <string name="coaching_label">Coaching in progress\u2026</string>
    <string name="complete">"COMPLETE!"</string>
    <string name="summary_title">"SUMMARY"</string>
    <string name="time">"TIME"</string>
    <string name="day">"DAY"</string>
    <string name="hit_rate">"HIT RATE"</string>
    <string name="upper_inhale">"INHALE"</string>
    <string name="upper_hold">"HOLD"</string>
    <string name="upper_exhale">"EXHALE"</string>
    <string name="profile_name_hint">Name:</string>
    <string name="profile_gender_male">Male</string>
    <string name="profile_gender_female">Female</string>
    <string name="profile_unit_cm">cm</string>
    <string name="profile_unit_in">in</string>
    <string name="profile_unit_ft">ft</string>
    <string name="profile_unit_kg">kg</string>
    <string name="profile_unit_lb">lb</string>
    <string name="profile_name_cannot_be_null">Profile information is not be saved, because profile name is empty.</string>
    <string name="profile_gender_cannot_be_null">Profile information is not be saved, because gender is empty.</string>
    <string name="profile_height_cannot_be_null">Profile information is not be saved, because height is empty.</string>
    <string name="profile_weight_cannot_be_null">Profile information is not be saved, because weight is empty.</string>
    <string name="profile_birthday_cannot_be_null">Profile information is not be saved, because birthday is empty.</string>
    <string name="chooser_dialog_done">"Done"</string>
    <string name="chooser_height_dialog_title">"Input Height"</string>
    <string name="chooser_weight_dialog_title">"Input Weight"</string>
    <string name="chooser_birthday_dialog_title">"Input Birthday"</string>
    <string name="profile_edit_prompt">Please tap the icons to make change. Icons will stop flashing once valid input is done.</string>
    <string name="profile_not_complete_prompt">Please complete profile setting before proceeding.</string>
    <string name="profile_complete_prompt">Your profile is set. Please proceed to pair W&#047;Me device or continue editing profile.</string>
    <string name="suggestion_title">SUGGESTION</string>
    <string name="agility_label">AGILITY</string>
    <string name="m_state_label">M.STATE</string>
    <string name="day_label">DAY</string>
    <string name="measure_history_title">MEASURE HISTORY</string>
    <string name="coach_history_title">COACHING HISTORY</string>
    <string name="ans_age_label">ANS AGE</string>
    <string name="delete_title">Delete</string>
    <string name="delete_content">"Delete history on <xliff:g id="date">%s</xliff:g> @ <xliff:g id="time">%s</xliff:g>?"</string>
    <string name="begin_setup">Begin to Set Up</string>
    <string name="setup_content">"To start using W&#047;Me, first setup your profile and then connect to your W&#047;Me device. Please tap the below button to begin."</string>
    <string name="welcome_label">Welcome to</string>
    <string name="aboutus_version_title">W&#047;Me app version:  %s</string>
    <string name="aboutus_wme_version_title">W&#047;Me wristband version:  %s</string>
    <string name="aboutus_description">W&#047;Me is created by Phyode, it\'s our 1st highly interactive deviceand can even visualize breathing.</string>
    <string name="pair_title">PAIR W&#047;Me</string>
    <string name="forget_device_label">Forget this device</string>
    <string name="scan_device_label">Scan for W&#047;Me device</string>
    <string name="no_pair_device_hit">No paired device</string>
    <string name="device_name_hit">W&#047;Me  - </string>
    <string name="use_me_title">Start using W&#047;Me!</string>
    <string name="device_connect">W&#047;Me connected</string>
    <string name="device_not_connect">W&#047;Me NOT connected</string>
    <string name="pair_select_title">Select W&#047;Me devices</string>
    <string name="pair_warning">Tab rescan button and press key on WME devices if it is not found for long time.</string>
    <string name="button_pair_label">Pair W&#047;Me</string>
    <string name="button_edit_profile_label">Edit Profile</string>
    <string name="name_toast">Tap to change W&#047;Me name</string>
    <string name="open_bluetooth_toast">Please open the bluetooth function</string>
    <string name="close_wifi_toast">Bluetooth connection may cause instability by Wi-Fi, I suggest you turn off it then try Bluetooth connection.</string>
    <string name="close_wifi">OFF</string>
    <string name="turnoff_wifi_notification">Wi-Fi will be disabled temporarily during measuring.</string>
    <string name="connected_device">Connected Device</string>
    <string name="device_name">Device Name</string>
    <string name="disconnect">Disconnect</string>
    <string name="no_connected_device">No Devices Connected</string>
    <string name="devices">Devices</string>
    <string name="no_devices_discovered_yet">No devices discovered yet</string>
    <string name="available_devices">Available Devices</string>
    <string name="search">Search</string>
    <string name="faq_question1">1. What is W&#047;Me?</string>
</resources>