<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_connected_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connected_device"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_corner"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:visibility="visible" >

        <TextView
            android:id="@+id/connected_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/device_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/connected_device_disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/disconnect"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/title_available_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:text="@string/available_devices"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/available_devices_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.50" >

    </ListView>

    <Button
        android:id="@+id/available_devices_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/search"
        android:textStyle="bold" />

</LinearLayout>