<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/health_main_bg_02"
    android:splitMotionEvents="false">
    
    <LinearLayout 
        android:id="@+id/measure"
        style = "@style/MeasureLayoutStyle"
        android:layout_marginTop="@dimen/history_margin_top"
        android:orientation="vertical"
        android:splitMotionEvents="false">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measure_title"
            style="@style/AppText.Bold"
            android:textSize="@dimen/history_large_text_size"/>
                
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_title"
            style="@style/AppText.Bold"
            android:textSize="@dimen/history_small_text_size"
            android:layout_marginTop="-10dp"/>
    </LinearLayout>
    
    <LinearLayout android:id="@+id/coaching"
        style = "@style/MeasureLayoutStyle"
        android:layout_below="@+id/measure"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:splitMotionEvents="false">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coaching_title"
            style="@style/AppText.Bold"
            android:textSize="@dimen/history_large_text_size"/>
        
       <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_title"
            style="@style/AppText.Bold"
            android:textSize="@dimen/history_small_text_size"
            android:layout_marginTop="-10dp"/>
        
    </LinearLayout>
</RelativeLayout>
