<?xml version="1.0" encoding="utf-8"?>
<com.fihtdc.smartbracelet.view.PrepareLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prepare"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center_horizontal"
    android:paddingBottom="@dimen/measure_prepare_text_padding_bottom" >

    <RelativeLayout
        android:id="@+id/prompt_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/prompt_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/health_teach_ic_01" />

        <TextView
            android:id="@+id/prompt_text"
            android:layout_width="@dimen/prepare_text_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prompt_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="@string/prompt_label"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/app_button_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/calm_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/calm_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/health_teach_ic_02" />

        <TextView
            android:layout_width="@dimen/prepare_text_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calm_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="@string/calm_label"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/app_button_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/measure_start_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/second_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/prepare_second_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/second_value"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/second_value"
            android:paddingBottom="35dip"
            android:paddingLeft="10dip"
            android:text="@string/second_label"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/app_button_text_size" />

        <TextView
            android:layout_width="@dimen/prepare_text_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/second_value"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-18dp"
            android:gravity="center_horizontal"
            android:text="@string/measure_start_label"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/app_button_text_size" />
    </RelativeLayout>

</com.fihtdc.smartbracelet.view.PrepareLayout>